{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 56,
  "lineage": "ec8ef8a3-9a24-13dd-912a-56a0988eeb1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05637f8bed6fc16f6",
            "arn": "arn:aws:ec2:us-west-1:646304591001:elastic-ip/eipalloc-05637f8bed6fc16f6",
            "association_id": "eipassoc-0c62459b1b198eff7",
            "domain": "vpc",
            "id": "eipalloc-05637f8bed6fc16f6",
            "network_border_group": "us-west-1",
            "network_interface": "eni-04bbf5c79e905ae9f",
            "private_dns": "ip-10-0-1-226.us-west-1.compute.internal",
            "private_ip": "10.0.1.226",
            "public_dns": "ec2-52-53-120-116.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.120.116",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT EIP"
            },
            "tags_all": {
              "Name": "NAT EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.mainvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce45259f491c3d4f",
            "arn": "arn:aws:ec2:us-west-1:646304591001:instance/i-07fda08982c886d0e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-ec2-role",
            "id": "i-07fda08982c886d0e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d419d6bb5780b97e",
            "private_dns": "ip-10-0-1-128.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.128",
            "public_dns": "ec2-13-56-197-179.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.197.179",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-057caeac0abe14d28",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b0a949ad1a138cb",
            "tags": {
              "Name": "Jenkins Instance"
            },
            "tags_all": {
              "Name": "Jenkins Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c628d77328e761de"
            ]
          },
          "dependencies": [
            "aws_security_group.main_sg",
            "aws_subnet.Public_Subnet_1",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce45259f491c3d4f",
            "arn": "arn:aws:ec2:us-west-1:646304591001:instance/i-043adc8bbc722c00f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-ec2-role",
            "id": "i-043adc8bbc722c00f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08844aa7662114a40",
            "private_dns": "ip-10-0-4-35.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a24c123941af40f5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01534bba82a07739a",
            "tags": {
              "Name": "SonarQube EC2"
            },
            "tags_all": {
              "Name": "SonarQube EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c628d77328e761de"
            ]
          },
          "dependencies": [
            "aws_security_group.main_sg",
            "aws_subnet.Private_Subnet_2",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ce45259f491c3d4f",
            "arn": "arn:aws:ec2:us-west-1:646304591001:instance/i-05559408383fd2b4e",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "devops-ec2-role",
            "id": "i-05559408383fd2b4e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0809fb7b1738d7793",
            "private_dns": "ip-10-0-3-84.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fe3a391792fe9678",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069c4c521295f3a7d",
            "tags": {
              "Name": "Vault EC2"
            },
            "tags_all": {
              "Name": "Vault EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c628d77328e761de"
            ]
          },
          "dependencies": [
            "aws_security_group.main_sg",
            "aws_subnet.Private_Subnet_1",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:646304591001:internet-gateway/igw-03fd1f69f2771eb46",
            "id": "igw-03fd1f69f2771eb46",
            "owner_id": "646304591001",
            "tags": {
              "Name": "Main IGW"
            },
            "tags_all": {
              "Name": "Main IGW"
            },
            "vpc_id": "vpc-049df704c996e252d"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05637f8bed6fc16f6",
            "association_id": "eipassoc-0c62459b1b198eff7",
            "connectivity_type": "public",
            "id": "nat-06f32948ce992edbb",
            "network_interface_id": "eni-04bbf5c79e905ae9f",
            "private_ip": "10.0.1.226",
            "public_ip": "52.53.120.116",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01b0a949ad1a138cb",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.main_igw",
            "aws_subnet.Public_Subnet_1",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:646304591001:route-table/rtb-081251fc802419c05",
            "id": "rtb-081251fc802419c05",
            "owner_id": "646304591001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06f32948ce992edbb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-049df704c996e252d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.NAT_Gateway",
            "aws_subnet.Public_Subnet_1",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:646304591001:route-table/rtb-0ff0c84346e2cb89e",
            "id": "rtb-0ff0c84346e2cb89e",
            "owner_id": "646304591001",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fd1f69f2771eb46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-049df704c996e252d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc7a034f52f6a9b5",
            "route_table_id": "rtb-081251fc802419c05",
            "subnet_id": "subnet-069c4c521295f3a7d"
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.Private_Route_Table",
            "aws_subnet.Private_Subnet_1",
            "aws_subnet.Public_Subnet_1",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f96ce93bc3a8a2e7",
            "route_table_id": "rtb-081251fc802419c05",
            "subnet_id": "subnet-01534bba82a07739a"
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_internet_gateway.main_igw",
            "aws_nat_gateway.NAT_Gateway",
            "aws_route_table.Private_Route_Table",
            "aws_subnet.Private_Subnet_2",
            "aws_subnet.Public_Subnet_1",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f76d3ed457396b4",
            "route_table_id": "rtb-0ff0c84346e2cb89e",
            "subnet_id": "subnet-01b0a949ad1a138cb"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.Public_Route_Table",
            "aws_subnet.Public_Subnet_1",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9223d91b0881bb4",
            "route_table_id": "rtb-0ff0c84346e2cb89e",
            "subnet_id": "subnet-0ee7e40c7f9a5e8ee"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.Public_Route_Table",
            "aws_subnet.Public_Subnet_2",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:646304591001:security-group/sg-0c628d77328e761de",
            "description": "Main security group for the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c628d77328e761de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins Web UI",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Main Security Group Allow SSH and HTTP",
            "name_prefix": "",
            "owner_id": "646304591001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Main Security Group"
            },
            "tags_all": {
              "Name": "Main Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-049df704c996e252d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:646304591001:subnet/subnet-069c4c521295f3a7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069c4c521295f3a7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646304591001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private Subnet 1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049df704c996e252d"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:646304591001:subnet/subnet-01534bba82a07739a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01534bba82a07739a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "646304591001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "Private Subnet 2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-049df704c996e252d"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:646304591001:subnet/subnet-01b0a949ad1a138cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b0a949ad1a138cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "646304591001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public Subnet 1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-049df704c996e252d"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:646304591001:subnet/subnet-0ee7e40c7f9a5e8ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee7e40c7f9a5e8ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "646304591001",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Public Subnet 2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-049df704c996e252d"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:646304591001:vpc/vpc-049df704c996e252d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b46938eec365cd4",
            "default_route_table_id": "rtb-03ee1ff7fff15fd2e",
            "default_security_group_id": "sg-02226a012ff179879",
            "dhcp_options_id": "dopt-0b37e3fd15e6c09d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049df704c996e252d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03ee1ff7fff15fd2e",
            "owner_id": "646304591001",
            "tags": {
              "Name": "Main VPC"
            },
            "tags_all": {
              "Name": "Main VPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}